PossDBCore/Grammers/output/CreateTableParser.java
// $ANTLR 3.4 F:\\workspace\\PossDB\\Grammers\\CreateTable.g 2012-11-22 14:10:34

package org.parser;

import java.util.List;
import org.parser.QueryList;
import org.parser.ColumnList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class CreateTableParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "ASTERIK", "B", "C", "CERTAIN", "COMMA", "CONDITION", "CREATE", "D", "DIGIT", "DOT", "E", "EQUAL", "EXCLAMATION", "F", "FALSE", "FROM", "G", "H", "I", "ID", "INNER", "INSERT", "INTO", "IS", "J", "JOIN", "K", "L", "LEFT_PAREN", "LEFT_TRIANGLE", "M", "N", "NEWLINE", "NOT", "NOT_EQUAL", "NUMBER", "O", "ON", "OR", "P", "POSSIBLE", "Q", "QUOTE", "R", "RIGHT_PAREN", "RIGHT_TRIANGLE", "S", "SELECT", "SEMICOLON", "T", "TABLE", "TRUE", "U", "UNKNOWN", "V", "VALUES", "VARIABLE", "W", "WHERE", "WS", "X", "Y", "Z", "'\\'\\''"
    };

    public static final int EOF=-1;
    public static final int T__69=69;
    public static final int A=4;
    public static final int AND=5;
    public static final int ASTERIK=6;
    public static final int B=7;
    public static final int C=8;
    public static final int CERTAIN=9;
    public static final int COMMA=10;
    public static final int CONDITION=11;
    public static final int CREATE=12;
    public static final int D=13;
    public static final int DIGIT=14;
    public static final int DOT=15;
    public static final int E=16;
    public static final int EQUAL=17;
    public static final int EXCLAMATION=18;
    public static final int F=19;
    public static final int FALSE=20;
    public static final int FROM=21;
    public static final int G=22;
    public static final int H=23;
    public static final int I=24;
    public static final int ID=25;
    public static final int INNER=26;
    public static final int INSERT=27;
    public static final int INTO=28;
    public static final int IS=29;
    public static final int J=30;
    public static final int JOIN=31;
    public static final int K=32;
    public static final int L=33;
    public static final int LEFT_PAREN=34;
    public static final int LEFT_TRIANGLE=35;
    public static final int M=36;
    public static final int N=37;
    public static final int NEWLINE=38;
    public static final int NOT=39;
    public static final int NOT_EQUAL=40;
    public static final int NUMBER=41;
    public static final int O=42;
    public static final int ON=43;
    public static final int OR=44;
    public static final int P=45;
    public static final int POSSIBLE=46;
    public static final int Q=47;
    public static final int QUOTE=48;
    public static final int R=49;
    public static final int RIGHT_PAREN=50;
    public static final int RIGHT_TRIANGLE=51;
    public static final int S=52;
    public static final int SELECT=53;
    public static final int SEMICOLON=54;
    public static final int T=55;
    public static final int TABLE=56;
    public static final int TRUE=57;
    public static final int U=58;
    public static final int UNKNOWN=59;
    public static final int V=60;
    public static final int VALUES=61;
    public static final int VARIABLE=62;
    public static final int W=63;
    public static final int WHERE=64;
    public static final int WS=65;
    public static final int X=66;
    public static final int Y=67;
    public static final int Z=68;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CreateTableParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CreateTableParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return CreateTableParser.tokenNames; }
    public String getGrammarFileName() { return "F:\\workspace\\PossDB\\Grammers\\CreateTable.g"; }



    // $ANTLR start "parse"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:15:1: parse : ( create_table | insert_tuple | select | is_functions );
    public final void parse() throws RecognitionException {
        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:15:8: ( create_table | insert_tuple | select | is_functions )
            int alt1=4;
            switch ( input.LA(1) ) {
            case CREATE:
                {
                alt1=1;
                }
                break;
            case INSERT:
                {
                alt1=2;
                }
                break;
            case SELECT:
                {
                alt1=3;
                }
                break;
            case IS:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:4: create_table
                    {
                    pushFollow(FOLLOW_create_table_in_parse29);
                    create_table();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:19: insert_tuple
                    {
                    pushFollow(FOLLOW_insert_tuple_in_parse33);
                    insert_tuple();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:34: select
                    {
                    pushFollow(FOLLOW_select_in_parse37);
                    select();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:43: is_functions
                    {
                    pushFollow(FOLLOW_is_functions_in_parse41);
                    is_functions();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "create_table"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:18:1: create_table : CREATE TABLE table_name table_element_list SEMICOLON ;
    public final void create_table() throws RecognitionException {
        CreateTableParser.table_name_return table_name1 =null;

        List table_element_list2 =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:19:2: ( CREATE TABLE table_name table_element_list SEMICOLON )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:19:4: CREATE TABLE table_name table_element_list SEMICOLON
            {
            match(input,CREATE,FOLLOW_CREATE_in_create_table50); 

            match(input,TABLE,FOLLOW_TABLE_in_create_table52); 

            pushFollow(FOLLOW_table_name_in_create_table54);
            table_name1=table_name();

            state._fsp--;


            pushFollow(FOLLOW_table_element_list_in_create_table59);
            table_element_list2=table_element_list();

            state._fsp--;



            		        Query.q = new CreateTable();
            			Query.q.setTableName((table_name1!=null?input.toString(table_name1.start,table_name1.stop):null)); 
            			Query.q.columns   = (ColumnList) table_element_list2;
            		

            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_create_table66); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "create_table"



    // $ANTLR start "insert_tuple"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:27:1: insert_tuple : INSERT INTO table_name VALUES integer_list ( CONDITION condition )? SEMICOLON ;
    public final void insert_tuple() throws RecognitionException {
        CreateTableParser.table_name_return table_name3 =null;

        List integer_list4 =null;

        String condition5 =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:28:9: ( INSERT INTO table_name VALUES integer_list ( CONDITION condition )? SEMICOLON )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:28:11: INSERT INTO table_name VALUES integer_list ( CONDITION condition )? SEMICOLON
            {
            match(input,INSERT,FOLLOW_INSERT_in_insert_tuple83); 

            match(input,INTO,FOLLOW_INTO_in_insert_tuple85); 

            pushFollow(FOLLOW_table_name_in_insert_tuple87);
            table_name3=table_name();

            state._fsp--;


            match(input,VALUES,FOLLOW_VALUES_in_insert_tuple89); 

            pushFollow(FOLLOW_integer_list_in_insert_tuple108);
            integer_list4=integer_list();

            state._fsp--;



            		        Query.q = new InsertIntoTable();
            			Query.q.setTableName((table_name3!=null?input.toString(table_name3.start,table_name3.stop):null)); 
            			Query.q.intList   = (QueryList) integer_list4;
            		

            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:33:5: ( CONDITION condition )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==CONDITION) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:34:8: CONDITION condition
                    {
                    match(input,CONDITION,FOLLOW_CONDITION_in_insert_tuple121); 

                    pushFollow(FOLLOW_condition_in_insert_tuple123);
                    condition5=condition();

                    state._fsp--;



                    		        ((InsertIntoTable)Query.q).condition = condition5;
                    		     

                    }
                    break;

            }


            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_insert_tuple137); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "insert_tuple"



    // $ANTLR start "condition"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:40:1: condition returns [String cond] : LEFT_PAREN condi= everything RIGHT_PAREN ;
    public final String condition() throws RecognitionException {
        String cond = null;


        CreateTableParser.everything_return condi =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:41:2: ( LEFT_PAREN condi= everything RIGHT_PAREN )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:41:4: LEFT_PAREN condi= everything RIGHT_PAREN
            {
            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_condition151); 

            pushFollow(FOLLOW_everything_in_condition155);
            condi=everything();

            state._fsp--;


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_condition158); 

            cond = String.valueOf((condi!=null?input.toString(condi.start,condi.stop):null)); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cond;
    }
    // $ANTLR end "condition"


    public static class table_name_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "table_name"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:43:1: table_name : ( schema DOT )? table ;
    public final CreateTableParser.table_name_return table_name() throws RecognitionException {
        CreateTableParser.table_name_return retval = new CreateTableParser.table_name_return();
        retval.start = input.LT(1);


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:44:2: ( ( schema DOT )? table )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:44:4: ( schema DOT )? table
            {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:44:4: ( schema DOT )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==DOT) ) {
                    alt3=1;
                }
            }
            switch (alt3) {
                case 1 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:44:5: schema DOT
                    {
                    pushFollow(FOLLOW_schema_in_table_name172);
                    schema();

                    state._fsp--;


                    match(input,DOT,FOLLOW_DOT_in_table_name174); 

                    }
                    break;

            }


            pushFollow(FOLLOW_table_in_table_name178);
            table();

            state._fsp--;


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "table_name"



    // $ANTLR start "table_element_list"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:46:1: table_element_list returns [List cols] : LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN ;
    public final List table_element_list() throws RecognitionException {
        List cols = null;


        Column column =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:47:2: ( LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:47:4: LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN
            {
            cols = new ColumnList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_table_element_list194); 

            pushFollow(FOLLOW_column_name_in_table_element_list198);
            column=column_name();

            state._fsp--;


            cols.add(column);

            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:47:89: ( COMMA column= column_name )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:47:90: COMMA column= column_name
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_table_element_list203); 

            	    pushFollow(FOLLOW_column_name_in_table_element_list207);
            	    column=column_name();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_table_element_list215); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "table_element_list"



    // $ANTLR start "select_element_list"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:49:1: select_element_list returns [List cols] :column= column_name ( COMMA column= column_name )* ;
    public final List select_element_list() throws RecognitionException {
        List cols = null;


        Column column =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:50:2: (column= column_name ( COMMA column= column_name )* )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:50:4: column= column_name ( COMMA column= column_name )*
            {
            cols = new ColumnList();

            pushFollow(FOLLOW_column_name_in_select_element_list233);
            column=column_name();

            state._fsp--;


            cols.add(column);

            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:50:79: ( COMMA column= column_name )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:50:80: COMMA column= column_name
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_select_element_list239); 

            	    pushFollow(FOLLOW_column_name_in_select_element_list243);
            	    column=column_name();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "select_element_list"



    // $ANTLR start "table_element_list_with_quote"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:52:1: table_element_list_with_quote returns [List cols] : LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN ;
    public final List table_element_list_with_quote() throws RecognitionException {
        List cols = null;


        String column =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:53:9: ( LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:53:11: LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN
            {
            cols = new QueryList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_table_element_list_with_quote271); 

            pushFollow(FOLLOW_quoted_item_in_table_element_list_with_quote276);
            column=quoted_item();

            state._fsp--;


            cols.add(column);

            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:53:97: ( COMMA column= quoted_item )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==COMMA) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:53:98: COMMA column= quoted_item
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_table_element_list_with_quote282); 

            	    pushFollow(FOLLOW_quoted_item_in_table_element_list_with_quote287);
            	    column=quoted_item();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_table_element_list_with_quote295); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "table_element_list_with_quote"



    // $ANTLR start "integer_list"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:55:1: integer_list returns [List cols] : LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN ;
    public final List integer_list() throws RecognitionException {
        List cols = null;


        Token column=null;

        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:56:9: ( LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:56:11: LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN
            {
            cols = new QueryList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_integer_list326); 

            column=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_integer_list331); 

            cols.add(column.getText());

            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:56:97: ( COMMA column= NUMBER )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==COMMA) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:56:98: COMMA column= NUMBER
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_integer_list337); 

            	    column=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_integer_list342); 

            	    cols.add(column.getText());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_integer_list350); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "integer_list"



    // $ANTLR start "column_name"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:58:1: column_name returns [Column name] : column_definition ;
    public final Column column_name() throws RecognitionException {
        Column name = null;


        Column column_definition6 =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:59:2: ( column_definition )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:59:4: column_definition
            {
            pushFollow(FOLLOW_column_definition_in_column_name372);
            column_definition6=column_definition();

            state._fsp--;


            name = column_definition6; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "column_name"



    // $ANTLR start "column_definition"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:61:1: column_definition returns [Column col] : ( schema DOT )? sel= ( ID | ASTERIK ) ( columnalias )? ;
    public final Column column_definition() throws RecognitionException {
        Column col = null;


        Token sel=null;
        CreateTableParser.schema_return schema7 =null;

        CreateTableParser.columnalias_return columnalias8 =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:2: ( ( schema DOT )? sel= ( ID | ASTERIK ) ( columnalias )? )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:4: ( schema DOT )? sel= ( ID | ASTERIK ) ( columnalias )?
            {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:4: ( schema DOT )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==DOT) ) {
                    alt8=1;
                }
            }
            switch (alt8) {
                case 1 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:5: schema DOT
                    {
                    pushFollow(FOLLOW_schema_in_column_definition388);
                    schema7=schema();

                    state._fsp--;


                    match(input,DOT,FOLLOW_DOT_in_column_definition390); 

                    }
                    break;

            }


            sel=(Token)input.LT(1);

            if ( input.LA(1)==ASTERIK||input.LA(1)==ID ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:35: ( columnalias )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ID) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:36: columnalias
                    {
                    pushFollow(FOLLOW_columnalias_in_column_definition403);
                    columnalias8=columnalias();

                    state._fsp--;


                    }
                    break;

            }


             
            	     col = new Column();
            	     
            	     if ((schema7!=null?input.toString(schema7.start,schema7.stop):null) != null) {
            	         col.tableName = (schema7!=null?input.toString(schema7.start,schema7.stop):null).toUpperCase();
            	     }
            	     col.name = (sel!=null?sel.getText():null).toUpperCase();
            	     if ((columnalias8!=null?input.toString(columnalias8.start,columnalias8.stop):null) != null) {
            	        col.alias = (columnalias8!=null?input.toString(columnalias8.start,columnalias8.stop):null).toUpperCase();
            	     }
            	 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return col;
    }
    // $ANTLR end "column_definition"



    // $ANTLR start "quoted_item"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:74:1: quoted_item returns [String name] : QUOTE qtext= onlysinglequotes QUOTE ;
    public final String quoted_item() throws RecognitionException {
        String name = null;


        CreateTableParser.onlysinglequotes_return qtext =null;


        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:75:2: ( QUOTE qtext= onlysinglequotes QUOTE )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:75:5: QUOTE qtext= onlysinglequotes QUOTE
            {
            match(input,QUOTE,FOLLOW_QUOTE_in_quoted_item422); 

            pushFollow(FOLLOW_onlysinglequotes_in_quoted_item426);
            qtext=onlysinglequotes();

            state._fsp--;


            match(input,QUOTE,FOLLOW_QUOTE_in_quoted_item428); 

            name = "'" + String.valueOf((qtext!=null?input.toString(qtext.start,qtext.stop):null)).toUpperCase() + "'" ; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "quoted_item"



    // $ANTLR start "condition_text"
    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:78:1: condition_text : ( ID | VARIABLE | EQUAL | QUOTE | EXCLAMATION | LEFT_PAREN | RIGHT_PAREN )* ;
    public final void condition_text() throws RecognitionException {
        try {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:80:2: ( ( ID | VARIABLE | EQUAL | QUOTE | EXCLAMATION | LEFT_PAREN | RIGHT_PAREN )* )
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:80:4: ( ID | VARIABLE | EQUAL | QUOTE | EXCLAMATION | LEFT_PAREN | RIGHT_PAREN )*
            {
            // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:80:4: ( ID | VARIABLE | EQUAL | QUOTE | EXCLAMATION | LEFT_PAREN | RIGHT_PAREN )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0 >= EQUAL && LA10_0 <= EXCLAMATION)||LA10_0==ID||LA10_0==LEFT_PAREN||LA10_0==QUOTE||LA10_0==RIGHT_PAREN||LA10_0==VARIABLE) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // F:\\workspace\\PossDB\\Grammers\\CreateTable.g:
            	    {
            	    if ( (input.LA(1) >= EQUAL && input.LA(1) <= EXCLAMATION)||input.LA(1)==ID||input.LA(1)==LEFT_PAREN||input.LA(1)==QUOTE||input.LA(1)==RIGHT_PAREN||input.LA(1)==VARIABLE ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "condition_text"



    // $ANTLR start "select"
